--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,14 +3,14 @@ stages:  ##nama step yang kita gunakan dan urutannya
   - build
   - deploy
 
-dockerfile-lint:
+cek-dockerfile:
   stage: test
   image: registry.gitlab.com/pipeline-components/hadolint:latest
   script:
     - hadolint Dockerfile
 
-build-image:
-  image: docker:latest ## docker image yang kita gunakan
+build-docker-image:
+  image: docker ## docker image yang kita gunakan
   stage: build ## nama stage
   services:
     - docker:dind
@@ -20,3 +20,19 @@ build-image:
     - docker build -t roboticpuppies/hello-nginx:$CI_COMMIT_SHORT_SHA .
     - docker push roboticpuppies/hello-nginx:$CI_COMMIT_SHORT_SHA
   when: manual
+
+deploy-ke-server:
+  stage: deploy
+  image: alpine
+  variables:
+	  GIT_STRATEGY: none  
+  before_script:
+  	- apk add openssh-client
+    - eval $(ssh-agent -s)
+    - echo "$PRODUCTION_SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
+    - mkdir -p ~/.ssh
+    - chmod 700 ~/.ssh
+  script:
+    - ssh -o StrictHostKeyChecking=no $PRODUCTION_USERNAME@$PRODUCTION_HOST "mkdir -p demo-ci"
+    - scp -o StrictHostKeyChecking=no docker-compose.yml $PRODUCTION_USERNAME@$PRODUCTION_HOST:demo-ci
+    - ssh -o StrictHostKeyChecking=no $PRODUCTION_USERNAME@$PRODUCTION_HOST "cd demo-ci && IMAGE_TAG=$CI_COMMIT_SHORT_SHA docker compose up -d"
