--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,9 +19,22 @@ build-docker-image:
   script: ## perintah yang kita gunakan untuk build docker
     - docker build -t roboticpuppies/hello-nginx:$CI_COMMIT_SHORT_SHA .
     - docker push roboticpuppies/hello-nginx:$CI_COMMIT_SHORT_SHA
-  when: manual
 
-deploy-ke-server:
+deploy-ke-server-development:
+  stage: deploy
+  image: alpine
+  before_script:
+    - apk add openssh-client
+    - eval $(ssh-agent -s)
+    - echo "$STAGING_SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
+    - mkdir -p ~/.ssh
+    - chmod 700 ~/.ssh
+  script:
+    - ssh -o StrictHostKeyChecking=no $STAGING_USERNAME@$STAGING_HOST "mkdir -p demo-ci"
+    - scp -o StrictHostKeyChecking=no docker-compose.yml $STAGING_USERNAME@$STAGING_HOST:demo-ci
+    - ssh -o StrictHostKeyChecking=no $STAGING_USERNAME@$STAGING_HOST "cd demo-ci && IMAGE_TAG=$CI_COMMIT_SHORT_SHA docker compose up -d"
+
+deploy-ke-server-production:
   stage: deploy
   image: alpine
   before_script:
