Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ cek-dockerfile:
   image: registry.gitlab.com/pipeline-components/hadolint:latest
   script:
     - hadolint Dockerfile
+  when: manual
 
 build-docker-image:
   image: docker ## docker image yang kita gunakan
@@ -49,5 +50,7 @@ deploy-ke-server-production:
     - ssh -o StrictHostKeyChecking=no $PRODUCTION_USERNAME@$PRODUCTION_HOST "mkdir -p demo-ci"
     - scp -o StrictHostKeyChecking=no .env.example docker-compose.yml $PRODUCTION_USERNAME@$PRODUCTION_HOST:demo-ci
     - ssh -o StrictHostKeyChecking=no $PRODUCTION_USERNAME@$PRODUCTION_HOST "cd demo-ci && envsubst < .env.example > .env"
+    - echo "======== Isi dari .env sekarang ========="
+    - ssh -o StrictHostKeyChecking=no $PRODUCTION_USERNAME@$PRODUCTION_HOST "cd demo-ci && cat .env"
     # - ssh -o StrictHostKeyChecking=no $PRODUCTION_USERNAME@$PRODUCTION_HOST "cd demo-ci && IMAGE_TAG=$CI_COMMIT_SHORT_SHA docker compose up -d --force-recreate"
   when: manual
