update env example

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 
 # Database
-DATABASE_USERNAME=$DB_USERNAME
-DATABASE_PASSWORD=$DB_PASSWORD
-DATABASE_DATABASE=$DB_NAME
+DATABASE_USERNAME=${DB_USERNAME}
+DATABASE_PASSWORD=${DB_PASSWORD}
+DATABASE_DATABASE=${DB_NAME}
