--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,8 +1,6 @@
 name: Docker Image CI
 run-name: ${{ github.actor }} is deploying 🚀
-on:
-  push:
-    branches: [ "master" ]
+on: [push]
 
 jobs:
   build:
