--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,4 +22,4 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         context: .
-        tags: roboticpuppies/hello-nginx:gh-$GITHUB_RUN_ID
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/hello-nginx:gh-$GITHUB_RUN_ID
