--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,13 +1,14 @@
 name: Docker Image CI
 run-name: ${{ github.actor }} is deploying 🚀
-on: [push]
-
+on:
+  push:
+    branches: main
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
+    - name: Checkout Repo
       uses: actions/checkout@v3
 
     - name: Login to Registry
