--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,5 +20,5 @@ jobs:
     - name: Build and Push Docker Image
       uses: docker/build-push-action@v4
       with:
-        context: .
-        tags: roboticpuppies/hello-nginx:gh-$GITHUB_RUN_ID
+        image: roboticpuppies/hello-nginx:gh-$GITHUB_RUN_ID
+        registry: docker.io
