--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,5 +20,5 @@ jobs:
     - name: Build and Push Docker Image
       uses: docker/build-push-action@v4
       with:
-        image: roboticpuppies/hello-nginx:gh-$GITHUB_RUN_ID
-        registry: docker.io
+        tags: user/hello-nginx:latest
+        push: true
