--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,6 +1,9 @@
 name: Docker Image CI
 run-name: ${{ github.actor }} is deploying 🚀
-on: workflow_dispatch
+on:
+  push:
+    branches:
+      - "main"
 jobs:
   build:
     runs-on: ubuntu-latest
