--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,5 +23,5 @@ jobs:
     - name: Build and Push Docker Image
       uses: docker/build-push-action@v4
       with:
-        tags: roboticpuppies/hello-nginx:${{ github.run_id }},roboticpuppies/hello-nginx:latest
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/hello-nginx:${{ github.run_id }},${{ secrets.DOCKERHUB_USERNAME }}/hello-nginx:latest
         push: true
