--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,17 +12,17 @@ jobs:
     - name: Checkout Repo
       uses: actions/checkout@v3
     - name: Step
-      run: echo ${GITHUB_SHA::7}
-#     - name: Login to Registry
-#       uses: docker/login-action@v2
-#       with:
-#         username: ${{ secrets.DOCKERHUB_USERNAME }}
-#         password: ${{ secrets.DOCKERHUB_TOKEN }}
-#     - name: Setup Buildx
-#       uses: docker/setup-buildx-action@v2
+      run: echo ${{github.sha::7}}
+    - name: Login to Registry
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Setup Buildx
+      uses: docker/setup-buildx-action@v2
 
-#     - name: Build and Push Docker Image
-#       uses: docker/build-push-action@v4
-#       with:
-#         tags: ${{ secrets.DOCKERHUB_USERNAME }}/hello-nginx:${{ github.run_id }},${{ secrets.DOCKERHUB_USERNAME }}/hello-nginx:latest
-#         push: true
+    - name: Build and Push Docker Image
+      uses: docker/build-push-action@v4
+      with:
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/hello-nginx:${{ github.sha::7 }},${{ secrets.DOCKERHUB_USERNAME }}/hello-nginx:latest
+        push: true
