--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,8 +11,6 @@ jobs:
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v3
-    - name: Step
-      run: echo ${{github.sha::7}}
     - name: Login to Registry
       uses: docker/login-action@v2
       with:
@@ -20,9 +18,10 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Setup Buildx
       uses: docker/setup-buildx-action@v2
-
+    - name: Get short SHA
+      run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
     - name: Build and Push Docker Image
       uses: docker/build-push-action@v4
       with:
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/hello-nginx:${{ github.sha::7 }},${{ secrets.DOCKERHUB_USERNAME }}/hello-nginx:latest
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/hello-nginx:${SHORT_SHA},${{ secrets.DOCKERHUB_USERNAME }}/hello-nginx:latest
         push: true
