--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,17 +11,19 @@ jobs:
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v3
-    - name: Login to Registry
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - name: Setup Buildx
-      uses: docker/setup-buildx-action@v2
+#     - name: Login to Registry
+#       uses: docker/login-action@v2
+#       with:
+#         username: ${{ secrets.DOCKERHUB_USERNAME }}
+#         password: ${{ secrets.DOCKERHUB_TOKEN }}
+#     - name: Setup Buildx
+#       uses: docker/setup-buildx-action@v2
     - name: Get short SHA
       run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
-    - name: Build and Push Docker Image
-      uses: docker/build-push-action@v4
-      with:
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/hello-nginx:${env.SHORT_SHA},${{ secrets.DOCKERHUB_USERNAME }}/hello-nginx:latest
-        push: true
+    - name: Echo
+      run: echo ${SHORT_SHA}
+#     - name: Build and Push Docker Image
+#       uses: docker/build-push-action@v4
+#       with:
+#         tags: ${{ secrets.DOCKERHUB_USERNAME }}/hello-nginx:${env.SHORT_SHA},${{ secrets.DOCKERHUB_USERNAME }}/hello-nginx:latest
+#         push: true
