--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,8 +16,8 @@ jobs:
 #       with:
 #         username: ${{ secrets.DOCKERHUB_USERNAME }}
 #         password: ${{ secrets.DOCKERHUB_TOKEN }}
-#     - name: Setup Buildx
-#       uses: docker/setup-buildx-action@v2
+    - name: Setup Buildx
+      uses: docker/setup-buildx-action@v2
     - name: Get short SHA
       run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
     - name: Echo
@@ -25,5 +25,5 @@ jobs:
 #     - name: Build and Push Docker Image
 #       uses: docker/build-push-action@v4
 #       with:
-#         tags: ${{ secrets.DOCKERHUB_USERNAME }}/hello-nginx:${env.SHORT_SHA},${{ secrets.DOCKERHUB_USERNAME }}/hello-nginx:latest
-#         push: true
+#         tags: ${{ secrets.DOCKERHUB_USERNAME }}/hello-nginx:${SHORT_SHA},${{ secrets.DOCKERHUB_USERNAME }}/hello-nginx:latest
+#         push: false
