--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,8 +22,8 @@ jobs:
       run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
     - name: Echo
       run: echo ${SHORT_SHA}
-#     - name: Build and Push Docker Image
-#       uses: docker/build-push-action@v4
-#       with:
-#         tags: ${{ secrets.DOCKERHUB_USERNAME }}/hello-nginx:${SHORT_SHA},${{ secrets.DOCKERHUB_USERNAME }}/hello-nginx:latest
-#         push: false
+    - name: Build and Push Docker Image
+      uses: docker/build-push-action@v4
+      with:
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/hello-nginx:${SHORT_SHA},${{ secrets.DOCKERHUB_USERNAME }}/hello-nginx:latest
+        push: false
