--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,5 +25,5 @@ jobs:
     - name: Build and Push Docker Image
       uses: docker/build-push-action@v4
       with:
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/hello-nginx:${SHORT_SHA},${{ secrets.DOCKERHUB_USERNAME }}/hello-nginx:latest
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/hello-nginx:${{ SHORT_SHA }},${{ secrets.DOCKERHUB_USERNAME }}/hello-nginx:latest
         push: false
