--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,19 +11,24 @@ jobs:
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v3
-#     - name: Login to Registry
-#       uses: docker/login-action@v2
-#       with:
-#         username: ${{ secrets.DOCKERHUB_USERNAME }}
-#         password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Login to Registry
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Docker meta
+      id: meta
+      uses: docker/metadata-action@v4
+      with:
+        # list of Docker images to use as base name for tags
+        images: |
+          ${{ secrets.DOCKERHUB_USERNAME }}/hello-nginx
+        # generate Docker tags based on the following events/attributes
+        tags: |
+          type=sha
     - name: Setup Buildx
       uses: docker/setup-buildx-action@v2
-    - name: Get short SHA
-      run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
-    - name: Echo
-      run: echo ${SHORT_SHA}
-    - name: Build and Push Docker Image
+    - name: Build and push
       uses: docker/build-push-action@v4
       with:
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/hello-nginx:${{ SHORT_SHA }},${{ secrets.DOCKERHUB_USERNAME }}/hello-nginx:latest
-        push: false
+        tags: ${{ steps.meta.outputs.tags }}
