--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,6 +26,8 @@ jobs:
         # generate Docker tags based on the following events/attributes
         tags: |
           type=sha
+        outputs:
+          image_tag=${{ steps.meta.outputs.tags }}
     - name: Setup Buildx
       uses: docker/setup-buildx-action@v2
     - name: Build and push
@@ -33,3 +35,8 @@ jobs:
       with:
         tags: ${{ steps.meta.outputs.tags }}
         push: true
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - run: echo "Tag name is ${{ needs.build.outputs.image_tag }}"
