--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,7 +7,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    outputs:
+      image_tag: ${{ steps.meta.outputs.tags }}
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v3
@@ -26,8 +27,6 @@ jobs:
         # generate Docker tags based on the following events/attributes
         tags: |
           type=sha
-        outputs:
-          image_tag=${{ steps.meta.outputs.tags }}
     - name: Setup Buildx
       uses: docker/setup-buildx-action@v2
     - name: Build and push
