--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,13 +10,13 @@ jobs:
     outputs:
       image_tag: ${{ steps.meta.outputs.tags }}
     steps:
-    - name: Checkout Repo
-      uses: actions/checkout@v3
-    - name: Login to Registry
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+#     - name: Checkout Repo
+#       uses: actions/checkout@v3
+#     - name: Login to Registry
+#       uses: docker/login-action@v2
+#       with:
+#         username: ${{ secrets.DOCKERHUB_USERNAME }}
+#         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Docker meta
       id: meta
       uses: docker/metadata-action@v4
@@ -27,13 +27,14 @@ jobs:
         # generate Docker tags based on the following events/attributes
         tags: |
           type=sha
-    - name: Setup Buildx
-      uses: docker/setup-buildx-action@v2
-    - name: Build and push
-      uses: docker/build-push-action@v4
-      with:
-        tags: ${{ steps.meta.outputs.tags }}
-        push: true
+#     - name: Setup Buildx
+#       uses: docker/setup-buildx-action@v2
+#     - name: Build and push
+#       uses: docker/build-push-action@v4
+#       with:
+#         tags: ${{ steps.meta.outputs.tags }}
+#         push: true
+    - run: echo ${{ steps.meta.outputs.tags }}
   deploy:
     runs-on: ubuntu-latest
     needs: build
