--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     outputs:
-      image_tag: ${{ steps.meta.outputs.tags }}
+      image_tag: ${{ env.DOCKER_METADATA_OUTPUT_VERSION }}
     steps:
 #     - name: Checkout Repo
 #       uses: actions/checkout@v3
@@ -34,7 +34,7 @@ jobs:
 #       with:
 #         tags: ${{ steps.meta.outputs.tags }}
 #         push: true
-    - run: echo ${{ steps.meta.outputs.tags }}
+    - run: echo ${{ env.DOCKER_METADATA_OUTPUT_VERSION }}
   deploy:
     runs-on: ubuntu-latest
     needs: build
